# Data-DR

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data4dr/: DataLoader.py
data4dr/data/: BaseDataLoader.py  __init__.py
data4dr/data/celegans/: __init__.py
data4dr/data/mnistSeries/: __init__.py
data4dr/data/textEmbeddings/: __init__.py
data4dr/data/uciml/: __init__.py
tests/: __init__.py
