[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data4dr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jjmmwon", email = "jmw1790@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jjmmwon/data4dr#readme"
Issues = "https://github.com/jjmmwon/data4dr/issues"
Source = "https://github.com/jjmmwon/data4dr"

[tool.hatch.version]
path = "data4dr/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:data4dr tests}"

[tool.coverage.run]
source_pkgs = ["data4dr", "tests"]
branch = true
parallel = true
omit = [
  "data4dr/__about__.py",
]

[tool.coverage.paths]
data4dr = ["data4dr", "*/data4dr/data4dr"]
tests = ["tests", "*/data4dr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
